--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,12 +1,34 @@
 {% extends 'base.html' %}
 
-{% block head %}<title>Task Smash 2.0</title>{% endblock %}
+{% block head %}
+<title>Edit Task · Task Smash</title>
+{% endblock %}
+
 {% block body %}
-<div class="content">
-    <h1>Update Task</h1>
-    <form action="/update/{{update_task.id}}" method="POST">
-        <input type="text" name="content" id="content" value="{{update_task.content}}">
-        <input type="submit" value="Update" id="btn_add">
+<div class="page">
+  <div class="card">
+    <h1 class="title">Edit Task</h1>
+    <p class="subtitle">Update your task and save changes</p>
+
+    <form action="/update/{{ update_task.id }}" method="POST" class="add-row">
+      <input
+        class="input"
+        type="text"
+        name="content"
+        id="content"
+        placeholder="Add a task"
+        required
+        autofocus
+      />
+
+      <button type="submit" class="btn btn-primary">
+        Update Task
+      </button>
+
+      <a href="/" class="btn btn-ghost">
+        Cancel
+      </a>
     </form>
+  </div>
 </div>
 {% endblock %}
