--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="page">
   <div class="card">
-    <form action="/update/{{ update_task.id }}" method="POST">
+    <form action="/projects/{{ project_id }}/update/{{ update_task.id }}" method="POST">
       <input
         class="input"
         type="text"
